--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,26 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.magicians.reflectorcrazy"
-    android:versionCode="1"
-    android:versionName="1.0" >
+   <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+       package="com.magicians.reflectorcrazy"
+        android:versionCode="1"
+        android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="24" />
+        <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="24" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/GdxTheme" >
-        <activity
-            android:name="com.magicians.reflectorcrazy.AndroidLauncher"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+        <application
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+            android:theme="@style/GdxTheme" >
+            <activity
+                android:name="com.magicians.reflectorcrazy.AndroidLauncher"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+            </activity>
 
-</manifest>
+
+
+        </application>
+
+    </manifest>
+
+
+
+    <!--
+
+    <?xml version="1.0" encoding="utf-8"?>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="comkaransite.wixsite.httpkbajaj.generalpage.MainActivity">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Our Game" />
+        <ImageView
+
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:image="sunset.jpeg"
+        />
+
+    </RelativeLayout>
+
+
+    -->
